array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var compte = 0
  for (i <- 0 to (num.Lenght -2)) {
    var a = num[i]
    var b = num[i+1]
    if 1<2 {
      compte = compte +1
    }
  }
  return compte
}